@@ -2,7 +2,7 @@ module StateMachine
   module Integrations #:nodoc:
     module DataMapper
       # Adds support for creating before/after transition callbacks within a
-      # DataMapper observer.  These callbacks behave very similarly to
+      # DataMapper observer.  These callbacks behave very similar to
       # before/after hooks during save/update/destroy/etc., but with the
       # following modifications:
       # * Each callback can define a set of transition conditions (i.e. guards)
@@ -35,7 +35,6 @@ module StateMachine
       #   require 'dm-observer'
       # 
       # If dm-observer is not available, then this feature will be skipped.
-      # 
       module Observer
         include MatcherHelpers
         
@@ -96,59 +95,11 @@ module StateMachine
         end
         
         # Creates a callback that will be invoked *after* a transition is
-        # performed, so long as the given configuration options match the
-        # transition.  Each part of the transition (event, to state, from state)
-        # must match in order for the callback to get invoked.
+        # performed so long as the given configuration options match the
+        # transition.
         # 
-        # See StateMachine::Machine#after_transition for more
-        # information about the various configuration options available.
-        # 
-        # == Examples
-        # 
-        #   class Vehicle
-        #     include DataMapper::Resource
-        #     
-        #     property :id, Serial
-        #     property :state, :String
-        #     
-        #     state_machine :initial => :parked do
-        #       event :ignite do
-        #         transition :parked => :idling
-        #       end
-        #     end
-        #   end
-        #   
-        #   class VehicleObserver
-        #     include DataMapper::Observer
-        #     
-        #     observe Vehicle
-        #     
-        #     after :save do |saved|
-        #       # log message
-        #     end
-        #     
-        #     # Target all state machines
-        #     after_transition :parked => :idling, :on => :ignite do
-        #       # put on seatbelt
-        #     end
-        #     
-        #     # Target a specific state machine
-        #     after_transition :state, any => :idling do
-        #       # put on seatbelt
-        #     end
-        #     
-        #     # Target all state machines without requirements
-        #     after_transition do |transition|
-        #       if transition.result
-        #         # log message
-        #       end
-        #     end
-        #   end
-        # 
-        # *Note* that in each of the above +before_transition+ callbacks, the
-        # callback is executed within the context of the object (i.e. the
-        # Vehicle instance being transition).  This means that +self+ refers
-        # to the vehicle record within each callback block.
+        # See +before_transition+ for a description of the possible configurations
+        # for defining callbacks.
         def after_transition(*args, &block)
           add_transition_callback(:after, *args, &block)
         end
@@ -157,20 +108,25 @@ module StateMachine
           # Adds the transition callback to a specific machine or all of the
           # state machines for each observed class.
           def add_transition_callback(type, *args, &block)
-            if args.first && !args.first.is_a?(Hash)
-              # Specific attribute is being targeted
-              attribute = args.first
-              transition_args = args[1..-1]
+            if args.any? && !args.first.is_a?(Hash)
+              # Specific attribute(s) being targeted
+              attributes = args
+              args = args.last.is_a?(Hash) ? [args.pop] : []
             else
               # Target all state machines
-              attribute = nil
-              transition_args = args
+              attributes = nil
             end
             
             # Add the transition callback to each class being observed
             observing.each do |klass|
-              state_machines = attribute ? [klass.state_machine(attribute)] : klass.state_machines.values
-              state_machines.each {|machine| machine.send("#{type}_transition", *transition_args, &block)}
+              state_machines =
+                if attributes
+                  attributes.map {|attribute| klass.state_machines.fetch(attribute)}
+                else
+                  klass.state_machines.values
+                end
+              
+              state_machines.each {|machine| machine.send("#{type}_transition", *args, &block)}
             end if observing
           end
       end
