@@ -1,5 +1,6 @@
 == master
 
+* Add support for targeting multiple specific state machines in DataMapper observer hooks
 * Don't pass the result of the action as an argument to callbacks (access via Transition#result)
 * Fix incorrect results being used when running transitions in parallel
 * Fix transition args not being set when run in parallel
